--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/overrides/_variables.scss
@@ -3,6 +3,7 @@ $crm-nested-table-box-shadow: 0 1px 13px 0px rgba(144, 144, 144, 0.25);
 $crm-box-shadow-sub-panel: 0 7px 16px 1px rgba(0,0,0,0.1);
 $crm-box-shadow-inset: inset 0 -1px 18px -3px rgba(148,148,148,0.62);
 $crm-select2-box-shadow-inset: inset 0 0 9px -5px rgb(51, 51, 51);
+$crm-modal-footer-shadow: inset 0 8px 21px -6px rgba(148, 148, 148, 0.4);
 
 //== CiviCRM Page
 //
