AI-21: Adjust age as of date field alignment

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_labels.scss
@@ -453,6 +453,16 @@ a.crm-clear-link {
     &:nth-child(4) {
       padding-top: 0 !important;
 
+      td {
+        &:first-child {
+          width: 450px;
+        }
+
+        &:last-child {
+          padding-top: 2px;
+        }
+      }
+
       label {
         display: block;
       }
