--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
@@ -77,7 +77,7 @@
 
   .form-item {
     padding: 0 !important;
-    margin:  !important;
+    margin: 0 !important;
 
     .description {
       margin: 0 !important;
