PCHR-1387: Fix date types in edit mode, multiple days to only have multiple dates selection

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -37,7 +37,7 @@
             <ng-include
               ng-show="$ctrl.isLeaveType('toil')"
               src="pathTpl + 'request-modal/details/toil.html'"></ng-include>
-            <crm-loading show="!$ctrl.loading.calculateBalanceChange">
+            <crm-loading show="!$ctrl.loading.showBalanceChange">
               <div ng-show="$ctrl.uiOptions.showBalance">
                 <hr/>
                 <div class="row chr_leave-request-modal__form-group">
