PCHR-1387: Allow manager to reject, set required documents, staff to respond to change status to waiting_approval

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -22,6 +22,7 @@
             ng-disabled="$ctrl.isRole('owner')"
             required type="checkbox" value="document.value"
             ng-click="$ctrl.request.toggleDocument(document.value)"
+            ng-checked="$ctrl.isChecked(document.value)"
             ng-selected="$ctrl.isDocumentInRequest(document.value)">
           <span>{{document.label}}</span>
         </div>
