--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
@@ -82,9 +82,9 @@
 
     <crm-loading show="!calendar.loading.calendar">
       <section class="panel panel-default"
-               ng-repeat="month in calendar.months">
+               ng-repeat="month in ::calendar.months track by $index">
         <ng-include
-          ng-hide="calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(month) === -1"
+          ng-hide="(calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(month) === -1)"
           src="$root.settings.pathTpl + 'components/manager-leave-calendar-month.html'"></ng-include>
       </section>
     </crm-loading>
