--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar.html
@@ -60,10 +60,10 @@
                        limit="4"
                        ng-model="calendar.selectedMonths">
               <ui-select-match placeholder="Select Months">
-                <span ng-bind="$item"></span>
+                <span ng-bind="$item.label"></span>
               </ui-select-match>
-              <ui-select-choices repeat="month in (calendar.months | filter: $select.search)">
-                <span ng-bind="month"></span>
+              <ui-select-choices repeat="month.label as month in (calendar.months | filter: $select.search)">
+                <span ng-bind="month.label"></span>
               </ui-select-choices>
             </ui-select>
           </div>
@@ -84,7 +84,7 @@
       <section class="panel panel-default"
                ng-repeat="month in ::calendar.months track by $index">
         <ng-include
-          ng-hide="(calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(month) === -1)"
+          ng-hide="(calendar.selectedMonths.length !== 0 && calendar.selectedMonths.indexOf(month.label) === -1)"
           src="$root.settings.pathTpl + 'components/manager-leave-calendar-month.html'"></ng-include>
       </section>
     </crm-loading>
