--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -172,7 +172,15 @@
                       </div>
                       <div class="row">
                         <div class="chr_leave-request-files_icon text-primary col-xs-8">
-                          <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                          <i
+                            class="fa fa-file-o"
+                            ng-class="{
+                              'fa fa-file-pdf-o': file.mime_type == 'application/pdf',
+                              'fa fa-file-image-o': file.mime_type == 'image/png' || file.mime_type == 'image/jpeg' || file.mime_type == 'image/gif',
+                              'fa fa-file-excel-o': file.mime_type == 'application/excel',
+                              'fa fa-file-word-o': file.mime_type == 'application/msword'
+                              }"
+                            aria-hidden="true"></i>
                           <span>{{file.name}}</span>
                         </div>
                         <div
@@ -189,16 +197,24 @@
                       <hr/>
                     </span>
                   </li>
-                  <span ng-if="$ctrl.request.uploader" ng-disabled="$ctrl.isMode('view')">
-                    <li ng-repeat="file in $ctrl.request.uploader.queue">
+                  <span ng-if="$ctrl.request.fileUploader" ng-disabled="$ctrl.isMode('view')">
+                    <li ng-repeat="file in $ctrl.request.fileUploader.queue">
                       <div class="chr_leave-request-files_meta">
                         <span class="chr_leave-request-files_author">Me</span>
                         <span>-</span>
-                        <span class="chr_leave-request-files_date">{{$ctrl.today | date: $ctrl.uiOptions.userDateFormat + ' HH:mm'}}</span>
+                        <span class="chr_leave-request-files_date">{{$ctrl.today | date: $ctrl.uiOptions.userDateFormatWithTime}}</span>
                       </div>
                       <div class="row">
                         <div class="chr_leave-request-files_icon text-primary col-xs-8">
-                          <i class="fa fa-file-pdf-o" aria-hidden="true"></i>
+                          <i
+                            class="fa fa-file-o"
+                            ng-class="{
+                            'fa fa-file-pdf-o': file.file.type == 'application/pdf',
+                            'fa fa-file-image-o': file.file.type == 'image/png' || file.file.type == 'image/jpeg' || file.file.type == 'image/gif',
+                            'fa fa-file-excel-o': file.file.type == 'application/excel',
+                            'fa fa-file-word-o': file.file.type == 'application/msword'
+                            }"
+                            aria-hidden="true"></i>
                           <span>{{file.file.name}}</span>
                         </div>
                         <div
@@ -208,7 +224,7 @@
                           <span
                             class="btn btn-link"
                             ng-disabled="$ctrl.isMode('view')"
-                            ng-click="$ctrl.request.uploader.removeFromQueue(file)">
+                            ng-click="$ctrl.request.fileUploader.removeFromQueue(file)">
                             Remove</span>
                         </div>
                       </div>
@@ -219,10 +235,10 @@
               </div>
               <div
                 nv-file-drop
-                uploader="$ctrl.request.uploader"
+                uploader="$ctrl.request.fileUploader"
                 class="chr_leave-request-files_upload"
                 ng-disabled="$ctrl.isMode('view')"
-                ng-if="$ctrl.request.uploader">
+                ng-if="$ctrl.request.fileUploader">
                 <div class="chr_leave-request-files_upload_action row text-center">
                   Drag and drop file here
                 </div>
@@ -236,7 +252,7 @@
                       type="file"
                       nv-file-select
                       ng-disabled="$ctrl.isMode('view')"
-                      uploader="$ctrl.request.uploader"
+                      uploader="$ctrl.request.fileUploader"
                       style="display:none;">
                   </label>
                 </div>
