--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/my-leave/components/my-leave-calendar.html
@@ -31,7 +31,7 @@
 
       <section class="panel panel-default"
                ng-repeat="month in (calendar.selectedMonths.length > 0 ? calendar.selectedMonths : calendar.months)">
-        <header class="panel-heading">
+        <header class="panel-heading chr_leave-calendar__month-header">
           <h2 class="panel-title">{{month}}</h2>
         </header>
         <div class="table-responsive">
