PCHR-2087: PR feedback

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar-month.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/manager-leave/components/manager-leave-calendar-month.html
@@ -43,7 +43,7 @@
             <a ng-if="day.leaveRequest"
                contact-id="calendar.contactId"
                leave-request-popup
-               leave-request='day.leaveRequest'
+               leave-request="day.leaveRequest"
                title="Click to open Leave Request">
             </a>
           </div>
