--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/directives/leave-request-popup.html
@@ -69,32 +69,32 @@
                     class="table chr_leave-request-modal__table"
                     ng-show="$ctrl.uiOptions.isChangeExpanded">
                     <thead>
-                      <tr>
-                        <th>Date</th>
-                        <th>Selection</th>
-                        <th>Amount</th>
-                      </tr>
+                    <tr>
+                      <th>Date</th>
+                      <th>Selection</th>
+                      <th>Amount</th>
+                    </tr>
                     </thead>
                     <tbody>
-                      <tr ng-repeat="breakdown in $ctrl.pagination.filteredbreakdown">
-                        <td>{{breakdown.date | date:'EEE '+ $ctrl.uiOptions.userDateFormat}}</td>
-                        <td>{{breakdown.type.label}}</td>
-                        <td>{{breakdown.amount}}</td>
-                      </tr>
+                    <tr ng-repeat="breakdown in $ctrl.pagination.filteredbreakdown">
+                      <td>{{breakdown.date | date:'EEE '+ $ctrl.uiOptions.userDateFormat}}</td>
+                      <td>{{breakdown.type.label}}</td>
+                      <td>{{breakdown.amount}}</td>
+                    </tr>
                     </tbody>
                     <tfoot>
-                      <tr>
-                        <td colspan="3" class="text-center">
-                          <uib-pagination
-                            ng-if="$ctrl.pagination.totalItems"
-                            total-items="$ctrl.pagination.totalItems"
-                            ng-model="$ctrl.pagination.currentPage"
-                            class="pagination"
-                            ng-change="$ctrl.pagination.pageChanged()"
-                            direction-links="false"
-                            items-per-page="$ctrl.pagination.numPerPage"></uib-pagination>
-                        </td>
-                      </tr>
+                    <tr>
+                      <td colspan="3" class="text-center">
+                        <uib-pagination
+                          ng-if="$ctrl.pagination.totalItems"
+                          total-items="$ctrl.pagination.totalItems"
+                          ng-model="$ctrl.pagination.currentPage"
+                          class="pagination"
+                          ng-change="$ctrl.pagination.pageChanged()"
+                          direction-links="false"
+                          items-per-page="$ctrl.pagination.numPerPage"></uib-pagination>
+                      </td>
+                    </tr>
                     </tfoot>
                   </table>
                 </div>
@@ -107,63 +107,85 @@
             <div class="row" ng-show="$ctrl.isLeaveType('toil')">
               <div class="col-xs-12 form-horizontal">
                 <hr>
-                <div class="expire-date">Expiry Date:
-                  <span>{{$ctrl.request.toil_expiry_date | date: $ctrl.uiOptions.userDateFormat}}</div>
+                <div class="form-group">
+                  <label class="col-xs-4 control-label">Expiry Date</label>
+                  <div class="col-xs-4">
+                    <span ng-if="!$ctrl.isRole('manager')">{{$ctrl.request.toil_expiry_date | date: $ctrl.uiOptions.userDateFormat}}</span>
+                    <div ng-if="$ctrl.isRole('manager')"
+                         class="input-group">
+                      <input
+                        type="text"
+                        class="form-control"
+                        uib-datepicker-popup
+                        datepicker-options="$ctrl.uiOptions.date.expiry.options"
+                        show-button-bar="false"
+                        ng-model="$ctrl.uiOptions.expiryDate"
+                        is-open="$ctrl.uiOptions.date.expiry.show"/>
+                      <span class="input-group-btn">
+                        <button
+                          type="button"
+                          class="btn btn-default fa fa-calendar"
+                          ng-click="$ctrl.uiOptions.date.expiry.show = true"></button>
+                      </span>
+                    </div>
+                  </div>
                 </div>
               </div>
-              <ng-include
-                ng-show="$ctrl.isLeaveType('sickness')"
-                src="pathTpl + 'request-modal/details/sickness.html'"></ng-include>
-            </uib-tab>
-            <uib-tab heading="Comments">
+            </div>
+            <ng-include
+              ng-show="$ctrl.isLeaveType('sickness')"
+              src="pathTpl + 'request-modal/details/sickness.html'"></ng-include>
+          </uib-tab>
+          <uib-tab heading="Comments">
+            <div
+              class="text-center chr_leave-request-modal__comments_empty"
+              ng-show="$ctrl.getActiveComments().length === 0">
+              No comments available. Comments can be added below.
+            </div>
+            <div
+              class="chr_leave-request-modal__comments"
+              ng-hide="$ctrl.getActiveComments().length === 0">
               <div
-                class="text-center chr_leave-request-modal__comments_empty"
-                ng-show="$ctrl.getActiveComments().length === 0">
-                No comments available. Comments can be added below.
-              </div>
-              <div
-                class="chr_leave-request-modal__comments"
-                ng-hide="$ctrl.getActiveComments().length === 0">
-                <div
-                  class="chr_leave-request-comment"
-                  ng-repeat="comment in $ctrl.getActiveComments() | orderBy: $ctrl.orderComment : true">
-                  <div class="chr_leave-request-comment__meta">
-                    <span class="chr_leave-request-comment__author">{{$ctrl.getCommentorName(comment.contact_id)}}</span>
-                    <span>
+                class="chr_leave-request-comment"
+                ng-repeat="comment in $ctrl.getActiveComments() | orderBy: $ctrl.orderComment : true">
+                <div class="chr_leave-request-comment__meta">
+                  <span class="chr_leave-request-comment__author">{{$ctrl.getCommentorName(comment.contact_id)}}</span>
+                  <span>
                       -
                     </span>
-                    <span class="chr_leave-request-comment__date">{{$ctrl.formatDateTime(comment.created_at)}}</span>
-                    <button
-                      class="btn btn-link"
-                      ng-disabled="$ctrl.isMode('view')"
-                      ng-click="$ctrl.request.deleteComment(comment)"
-                      ng-show="$ctrl.removeCommentVisibility(comment)">Remove</button>
-                  </div>
-                  <div class="chr_leave-request-comment__text" ng-bind-html="comment.text"></div>
+                  <span class="chr_leave-request-comment__date">{{$ctrl.formatDateTime(comment.created_at)}}</span>
+                  <button
+                    class="btn btn-link"
+                    ng-disabled="$ctrl.isMode('view')"
+                    ng-click="$ctrl.request.deleteComment(comment)"
+                    ng-show="$ctrl.removeCommentVisibility(comment)">Remove
+                  </button>
                 </div>
+                <div class="chr_leave-request-comment__text" ng-bind-html="comment.text"></div>
               </div>
-              <div
-                class="chr_wysiwyg"
-                text-angular
-                prevent-animations
-                ng-disabled="$ctrl.isMode('view')"
-                ta-toolbar="[['bold','italics','underline']]"
-                ng-model="$ctrl.comment.text"></div>
-              <div class="chr_wysiwyg__action">
-                <hr/>
-                <button
-                  class="btn btn-link"
-                  ng-click="$ctrl.addComment()"
-                  ng-disabled="$ctrl.comment.text.length === 0 || $ctrl.isMode('view')">
-                  <i class="fa fa-comment-o" aria-hidden="true"></i>
-                  Add comment
-                </button>
-              </div>
-            </uib-tab>
-            <uib-tab heading="Files">
-              <div>
-                <ul class="chr_leave-request-files_list container-fluid">
-                  <li ng-repeat="file in $ctrl.request.files">
+            </div>
+            <div
+              class="chr_wysiwyg"
+              text-angular
+              prevent-animations
+              ng-disabled="$ctrl.isMode('view')"
+              ta-toolbar="[['bold','italics','underline']]"
+              ng-model="$ctrl.comment.text"></div>
+            <div class="chr_wysiwyg__action">
+              <hr/>
+              <button
+                class="btn btn-link"
+                ng-click="$ctrl.addComment()"
+                ng-disabled="$ctrl.comment.text.length === 0 || $ctrl.isMode('view')">
+                <i class="fa fa-comment-o" aria-hidden="true"></i>
+                Add comment
+              </button>
+            </div>
+          </uib-tab>
+          <uib-tab heading="Files">
+            <div>
+              <ul class="chr_leave-request-files_list container-fluid">
+                <li ng-repeat="file in $ctrl.request.files">
                     <span ng-if="!file.toBeDeleted">
                       <div class="chr_leave-request-files_meta">
                         <span class="chr_leave-request-files_author">{{$ctrl.getCommentorName(file.contact_id)}}</span>
@@ -196,8 +218,8 @@
                       </div>
                       <hr/>
                     </span>
-                  </li>
-                  <span ng-if="$ctrl.request.fileUploader" ng-disabled="$ctrl.isMode('view')">
+                </li>
+                <span ng-if="$ctrl.request.fileUploader" ng-disabled="$ctrl.isMode('view')">
                     <li ng-repeat="file in $ctrl.request.fileUploader.queue">
                       <div class="chr_leave-request-files_meta">
                         <span class="chr_leave-request-files_author">Me</span>
@@ -231,92 +253,94 @@
                       <hr/>
                     </li>
                   </span>
-                </ul>
-              </div>
-              <div
-                nv-file-drop
-                uploader="$ctrl.request.fileUploader"
-                class="chr_leave-request-files_upload"
-                ng-disabled="$ctrl.isMode('view')"
-                ng-if="$ctrl.request.fileUploader">
-                <div class="chr_leave-request-files_upload_action row text-center">
-                  Drag and drop file here
-                </div>
-                <div class="chr_leave-request-files_upload_action row text-center">
-                  or
-                </div>
-                <div class="chr_leave-request-files_upload_action row text-center">
-                  <label class="btn btn-primary btn-file">
-                    Browse
-                    <input
-                      type="file"
-                      nv-file-select
-                      ng-disabled="$ctrl.isMode('view')"
-                      uploader="$ctrl.request.fileUploader"
-                      style="display:none;">
-                  </label>
-                </div>
-              </div>
-            </uib-tab>
-          </uib-tabset>
-        </div>
-      </div>
-      <div
-        ng-show="$ctrl.isRole('manager')"
-        class="row chr_leave-request-modal__response">
-        <div class="col-xs-12 form-horizontal">
-          <div class="form-group">
-            <label class="col-xs-4 control-label">Set status to:<i class="fa fa-asterisk"></i>
-            </label>
-            <div class="col-xs-8">
-              <div class="chr_custom-select chr_custom-select--full">
-                <select
-                  name="statusSelect"
-                  ng-options="status.value as status.label for status in $ctrl.requestStatuses"
-                  ng-model="$ctrl.request.status_id">
-                  <option value="">- select -</option>
-                </select>
-              </div>
+              </ul>
             </div>
-          </div>
-        </div>
-        <div ng-show="$ctrl.request.selectedResponse == 3">
-          <div class="col-xs-12">Please add a comment:</div>
-          <div class="col-xs-12">
             <div
-              class="chr_wysiwyg"
-              text-angular
-              prevent-animations
-              ta-toolbar="[['bold','italics','underline']]"
-              ng-model="myleave.request.responseComment"></div>
-            <div class="chr_wysiwyg__action">
-              <hr/>
-              <button class="btn btn-link">
-                <i class="fa fa-comment-o" aria-hidden="true"></i>
-                Add comment
-              </button>
+              nv-file-drop
+              uploader="$ctrl.request.fileUploader"
+              class="chr_leave-request-files_upload"
+              ng-disabled="$ctrl.isMode('view')"
+              ng-if="$ctrl.request.fileUploader">
+              <div class="chr_leave-request-files_upload_action row text-center">
+                Drag and drop file here
+              </div>
+              <div class="chr_leave-request-files_upload_action row text-center">
+                or
+              </div>
+              <div class="chr_leave-request-files_upload_action row text-center">
+                <label class="btn btn-primary btn-file">
+                  Browse
+                  <input
+                    type="file"
+                    nv-file-select
+                    ng-disabled="$ctrl.isMode('view')"
+                    uploader="$ctrl.request.fileUploader"
+                    style="display:none;">
+                </label>
+              </div>
             </div>
-          </div>
-        </div>
+          </uib-tab>
+        </uib-tabset>
       </div>
     </div>
     <div
-      ng-if="$ctrl.error"
-      uib-alert
-      class="danger"
-      close="$ctrl.closeAlert()"
-      dismiss-on-timeout="5000">{{$ctrl.error}}</div>
-    <div class="modal-footer">
-      <button
-        type="button"
-        class="btn btn-primary pull-left"
-        ng-click="$ctrl.cancel()">
-        Back
-      </button>
-      <button
-        type="submit"
-        class="btn btn-primary"
-        ng-disabled="!$ctrl.canSubmit()"
-        ng-click="$ctrl.submit()">Save</button>
+      ng-show="$ctrl.isRole('manager')"
+      class="row chr_leave-request-modal__response">
+      <div class="col-xs-12 form-horizontal">
+        <div class="form-group">
+          <label class="col-xs-4 control-label">Set status to:<i class="fa fa-asterisk"></i>
+          </label>
+          <div class="col-xs-8">
+            <div class="chr_custom-select chr_custom-select--full">
+              <select
+                name="statusSelect"
+                ng-options="status.value as status.label for status in $ctrl.requestStatuses"
+                ng-model="$ctrl.request.status_id">
+                <option value="">- select -</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div ng-show="$ctrl.request.selectedResponse == 3">
+        <div class="col-xs-12">Please add a comment:</div>
+        <div class="col-xs-12">
+          <div
+            class="chr_wysiwyg"
+            text-angular
+            prevent-animations
+            ta-toolbar="[['bold','italics','underline']]"
+            ng-model="myleave.request.responseComment"></div>
+          <div class="chr_wysiwyg__action">
+            <hr/>
+            <button class="btn btn-link">
+              <i class="fa fa-comment-o" aria-hidden="true"></i>
+              Add comment
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
-  </crm-loading>
+  </div>
+  <div
+    ng-if="$ctrl.error"
+    uib-alert
+    class="danger"
+    close="$ctrl.closeAlert()"
+    dismiss-on-timeout="5000">{{$ctrl.error}}
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-primary pull-left"
+      ng-click="$ctrl.cancel()">
+      Back
+    </button>
+    <button
+      type="submit"
+      class="btn btn-primary"
+      ng-disabled="!$ctrl.canSubmit()"
+      ng-click="$ctrl.submit()">Save
+    </button>
+  </div>
+</crm-loading>
