--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/toil.html
@@ -48,7 +48,7 @@
   <div class="col-xs-12 form-horizontal">
     <hr>
     <div class="row">
-      <div class="col-xs-12"><p>TOIL to be Accuired:</p></div>
+      <div class="col-xs-12"><p>TOIL to be Accrued:</p></div>
       <div class="col-xs-12">
         <div class="chr_custom-select chr_custom-select--full">
           <select
