PCHR-1841: Styles fixes for document

--- a/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
+++ b/uk.co.compucorp.civicrm.hrleaveandabsences/views/shared/request-modal/details/sickness.html
@@ -15,17 +15,15 @@
         </div>
       </div>
     </div>
-    <div class="form-group">
-      <div class="col-xs-12">
-        <div ng-repeat="document in $ctrl.sicknessDocumentTypes">
-          <input
-            ng-disabled="$ctrl.isRole('owner')"
-            required type="checkbox" value="document.value"
-            ng-click="$ctrl.request.toggleDocument(document.value)"
-            ng-checked="$ctrl.isChecked(document.value)"
-            ng-selected="$ctrl.isDocumentInRequest(document.value)">
-          <span>{{document.label}}</span>
-        </div>
+    <div class="form-group chr_leave-request-modal__required-documents">
+      <div class="col-xs-12" ng-repeat="document in $ctrl.sicknessDocumentTypes">
+        <input
+          ng-disabled="$ctrl.isRole('owner')"
+          required type="checkbox" value="document.value"
+          ng-click="$ctrl.request.toggleDocument(document.value)"
+          ng-checked="$ctrl.isChecked(document.value)"
+          ng-selected="$ctrl.isDocumentInRequest(document.value)">
+        <span>{{document.label}}</span>
       </div>
     </div>
   </div>
